fixed the way how the CategoryIds are retrieved, the array is ready to be used for the database

--- a/resources/js/SearchPage/components/DragAndDrop/style.scss
+++ b/resources/js/SearchPage/components/DragAndDrop/style.scss
@@ -60,10 +60,11 @@ h5 {
     min-height: 400px;
     display: flex;
     flex-flow: column nowrap;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     border-radius: 20px;
     background-color: darkcyan;
+    overflow: hidden auto;
 }
 
 .dragging {
