--- a/public/css/main.css
+++ b/public/css/main.css
@@ -24,6 +24,41 @@
 .form-create-group_item {
   width: 80%;
 }
+.admin-container {
+  display: grid;
+  width: 100vw;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  -moz-column-gap: 10%;
+       column-gap: 10%;
+  justify-items: start;
+  margin: 2em;
+}
+.admin-container .left-side .table-style, .admin-container .right-side .table-style {
+  border-collapse: collapse;
+  margin: 25px 0px;
+  font-size: 18px;
+  min-width: 400px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+.admin-container .left-side .table-style thead tr, .admin-container .right-side .table-style thead tr {
+  background-color: #e4919f;
+  color: #ffffff;
+  text-align: left;
+}
+.admin-container .left-side .table-style th, .admin-container .left-side .table-style td, .admin-container .right-side .table-style th, .admin-container .right-side .table-style td {
+  padding: 10px 15px;
+}
+.admin-container .left-side .table-style tbody tr, .admin-container .right-side .table-style tbody tr {
+  border-bottom: 1px solid #dddddd;
+}
+.admin-container .left-side .table-style tbody tr:nth-of-type(even), .admin-container .right-side .table-style tbody tr:nth-of-type(even) {
+  background-color: #f3f3f3;
+}
+.admin-container .left-side .table-style tbody tr:last-of-type, .admin-container .right-side .table-style tbody tr:last-of-type {
+  border-bottom: 2px solid #009879;
+}
+
 * {
   box-sizing: border-box;
 }
