--- a/resources/js/SearchPage/components/SoloOrGroupPopup/SearchPopUp-ver1.scss
+++ b/resources/js/SearchPage/components/SoloOrGroupPopup/SearchPopUp-ver1.scss
@@ -2,29 +2,29 @@
     height: 100vh;
     width: 100vw;
     background: rgba(0, 0, 0, 0.6);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    // display: none;
     position: fixed;
     // &:hover {
     //     cursor: pointer;
     // }
-    z-index: 1;
+    z-index: 2;
     h2,
     h3 {
         margin: 1rem 0;
         padding: 0.5rem 0;
         border: none;
     }
-    // display: none;
 }
 
 .popup {
     height: 80%;
-    width: 50%;
-    z-index: 2;
+    width: 60%;
+    z-index: 3;
     background: rgb(223, 184, 113);
-    padding: 1.5rem;
+    position: absolute;
+    // top: 50%;
+    // transform: translate(-50%, -50%);
+    // left: 50%;
     display: flex;
     flex-direction: column;
     align-items: stretch;
@@ -33,7 +33,6 @@
     }
     overflow: hidden scroll;
     // display: none;
-    border-radius: 1rem;
 }
 
 .users-list {
