--- a/public/css/main.css
+++ b/public/css/main.css
@@ -24,25 +24,34 @@
 .form-create-group_item {
   width: 80%;
 }
+h1 {
+  font-style: "Comfortaa", cursive;
+}
+
 .admin-container {
   display: grid;
   width: 100vw;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 2fr;
   grid-template-rows: 1fr;
-  -moz-column-gap: 10%;
-       column-gap: 10%;
   justify-items: start;
   margin: 2em;
+  font-family: "Comfortaa", cursive;
+}
+.admin-container .left-side h2, .admin-container .right-side h2 {
+  text-align: left;
+}
+.admin-container .left-side button, .admin-container .right-side button {
+  text-align: center;
 }
 .admin-container .left-side .table-style, .admin-container .right-side .table-style {
   border-collapse: collapse;
   margin: 25px 0px;
   font-size: 18px;
-  min-width: 400px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  min-width: 300px;
+  box-shadow: 0px 1px 5px #adadad;
 }
 .admin-container .left-side .table-style thead tr, .admin-container .right-side .table-style thead tr {
-  background-color: #e4919f;
+  background-color: #edae49;
   color: #ffffff;
   text-align: left;
 }
@@ -53,10 +62,10 @@
   border-bottom: 1px solid #dddddd;
 }
 .admin-container .left-side .table-style tbody tr:nth-of-type(even), .admin-container .right-side .table-style tbody tr:nth-of-type(even) {
-  background-color: #f3f3f3;
+  background-color: #fffaf1;
 }
 .admin-container .left-side .table-style tbody tr:last-of-type, .admin-container .right-side .table-style tbody tr:last-of-type {
-  border-bottom: 2px solid #009879;
+  border-bottom: 2px solid #edae49;
 }
 
 .nav-container {
