--- a/resources/scss/admin/index.scss
+++ b/resources/scss/admin/index.scss
@@ -7,25 +7,48 @@ $button-color: #414c6b;
 $main-shadow: 0px 1px 5px rgb(173, 173, 173);
 $font-text: "Comfortaa", cursive;
 
+body {
+    font-family: $font-text;
+}
+
+
 h1 {
-    font-style: $font-text;
+    margin: 2rem;
+}
+
+a {
+    text-decoration: none;
 }
 
 .admin-container{
     display: grid;
     width: 100vw;
     grid-template-columns: 1fr 2fr;
-    grid-template-rows: 1fr;
+    grid-template-rows: 1fr 1fr;
     justify-items: start;
-    margin: 2em;
-    font-family: $font-text;
+    margin: 2rem;
     
     .left-side, .right-side{
         h2 {
             text-align: left;
         }
         button {
-           text-align: center;
+            margin: 0 auto;
+            display: block;
+            background-color: $button-color;
+            width: 12rem;
+            height: 2rem;
+
+            a {
+                color: white;
+                font-family: $font-text;
+            }
+        }
+        .events-btn{
+            display: flex;
+            margin: 0 auto;
+            width: 50%;
+            padding: 0;
         }
         .table-style {
             border-collapse: collapse;
