--- a/resources/scss/colors.scss
+++ b/resources/scss/colors.scss
@@ -1,2 +1,17 @@
 $background_color: darkgoldenrod;
 $login_button: darkmagenta;
+
+// general
+$background: #fffaf1;
+$background-draggable: #f9edcc;
+$pop-border: #ea2b1f;
+$search: #edae49;
+$light-yellow: #f9df74;
+$headers: #414c6b;
+
+// soft shadow
+$main-shadow: 0px 1px 5px rgb(173, 173, 173);
+$pop-shadow: 1px 1px 5px $pop-border;
+
+// font
+$font-headers: "Nunito", sans-serif;
