--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -7,6 +7,7 @@
 // @import "../js/SearchPage/components/DragAndDrop/style-ver3.scss";
 @import "../js/SearchPage/components/DragAndDrop/style-ver4.scss";
 @import "../js/SearchPage/components/SoloOrGroupPopup/SearchPopUp-ver1.scss";
+@import "login/login.scss";
 
 * {
     box-sizing: border-box;
