--- a/public/css/main.css
+++ b/public/css/main.css
@@ -44,49 +44,126 @@ a {
   justify-items: start;
   margin: 2rem;
 }
-.admin-container .left-side h2, .admin-container .right-side h2 {
+
+.left-side h2, .right-side h2 {
   text-align: left;
 }
-.admin-container .left-side button, .admin-container .right-side button {
+.left-side button, .right-side button {
   margin: 0 auto;
   display: block;
   background-color: #414c6b;
   width: 12rem;
   height: 2rem;
 }
-.admin-container .left-side button a, .admin-container .right-side button a {
+.left-side button a, .right-side button a {
   color: white;
   font-family: "Comfortaa", cursive;
 }
-.admin-container .left-side .events-btn, .admin-container .right-side .events-btn {
+.left-side .events-btn, .right-side .events-btn {
   display: flex;
   margin: 0 auto;
   width: 50%;
   padding: 0;
 }
-.admin-container .left-side .table-style, .admin-container .right-side .table-style {
+.left-side .table-style, .right-side .table-style {
   border-collapse: collapse;
   margin: 25px 0px;
   font-size: 18px;
   min-width: 300px;
   box-shadow: 0px 1px 5px #adadad;
 }
-.admin-container .left-side .table-style thead tr, .admin-container .right-side .table-style thead tr {
+.left-side .table-style thead tr, .right-side .table-style thead tr {
   background-color: #edae49;
   color: #ffffff;
   text-align: left;
 }
-.admin-container .left-side .table-style th, .admin-container .left-side .table-style td, .admin-container .right-side .table-style th, .admin-container .right-side .table-style td {
+.left-side .table-style th, .left-side .table-style td, .right-side .table-style th, .right-side .table-style td {
   padding: 10px 15px;
 }
-.admin-container .left-side .table-style tbody tr, .admin-container .right-side .table-style tbody tr {
+.left-side .table-style tbody tr, .right-side .table-style tbody tr {
   border-bottom: 1px solid #dddddd;
 }
-.admin-container .left-side .table-style tbody tr:nth-of-type(even), .admin-container .right-side .table-style tbody tr:nth-of-type(even) {
+.left-side .table-style tbody tr:nth-of-type(even), .right-side .table-style tbody tr:nth-of-type(even) {
   background-color: #fffaf1;
 }
-.admin-container .left-side .table-style tbody tr:last-of-type, .admin-container .right-side .table-style tbody tr:last-of-type {
+.left-side .table-style tr:hover td, .right-side .table-style tr:hover td {
+  color: black;
+  border-top: 1px solid grey;
+  border-bottom: 1px solid grey;
+}
+.left-side .table-style tbody tr:last-of-type, .right-side .table-style tbody tr:last-of-type {
   border-bottom: 2px solid #edae49;
+}
+
+h2 {
+  display: flex;
+  align-self: flex-start;
+  padding: 2rem 0 0 2rem;
+}
+
+.future-container, .repeated-container, .historical-container {
+  display: flex;
+  padding: 2rem;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.future-event, .repeated-event, .historical-event {
+  width: 49%;
+}
+.future-event table, .repeated-event table, .historical-event table {
+  border-collapse: collapse;
+  margin: 25px 0px;
+  font-size: 18px;
+  min-width: 300px;
+  box-shadow: 0px 1px 5px #adadad;
+}
+.future-event table thead tr, .repeated-event table thead tr, .historical-event table thead tr {
+  background-color: #edae49;
+  color: #ffffff;
+  text-align: left;
+}
+.future-event table th, .future-event table td, .repeated-event table th, .repeated-event table td, .historical-event table th, .historical-event table td {
+  padding: 10px 15px;
+}
+.future-event table tbody tr, .repeated-event table tbody tr, .historical-event table tbody tr {
+  border-bottom: 1px solid #dddddd;
+}
+.future-event table tbody tr:nth-of-type(even), .repeated-event table tbody tr:nth-of-type(even), .historical-event table tbody tr:nth-of-type(even) {
+  background-color: #fffaf1;
+}
+.future-event table tr:hover td, .repeated-event table tr:hover td, .historical-event table tr:hover td {
+  color: black;
+  border-top: 1px solid grey;
+  border-bottom: 1px solid grey;
+}
+.future-event table tbody tr:last-of-type, .repeated-event table tbody tr:last-of-type, .historical-event table tbody tr:last-of-type {
+  border-bottom: 2px solid #edae49;
+}
+
+.line {
+  width: 30%;
+  border: 1px dashed #b6b5b5;
+  margin: 1rem auto;
+}
+
+button, input {
+  margin: 0 auto;
+  display: block;
+  background-color: #414c6b;
+  width: 4rem;
+  height: 1.5rem;
+  margin: 0.2rem;
+  color: white;
+  font-family: "Comfortaa", cursive;
+}
+button a, input a {
+  color: white;
+  font-family: "Comfortaa", cursive;
+}
+
+p {
+  padding-left: 2rem;
 }
 
 .nav-container {
