--- a/resources/scss/admin/all-events.scss
+++ b/resources/scss/admin/all-events.scss
@@ -1,49 +1,23 @@
 @import '../colors.scss';
 
-body {
-    font-family: $font-text;
+h2 {
+    display: flex;
+    align-self: flex-start;
+    padding: 2rem 0 0 2rem;
 }
 
-
-h1 {
-    margin: 2rem;
+// containers
+.future-container, .repeated-container, .historical-container{
+    display: flex;
+    padding: 2rem;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
-a {
-    text-decoration: none;
-}
-
-.admin-container{
-    display: grid;
-    width: 100vw;
-    grid-template-columns: 1fr 2fr;
-    grid-template-rows: 1fr 1fr;
-    justify-items: start;
-    margin: 2rem;
-}
-    .left-side, .right-side{
-        h2 {
-            text-align: left;
-        }
-        button {
-            margin: 0 auto;
-            display: block;
-            background-color: $button-color;
-            width: 12rem;
-            height: 2rem;
-
-            a {
-                color: white;
-                font-family: $font-text;
-            }
-        }
-        .events-btn{
-            display: flex;
-            margin: 0 auto;
-            width: 50%;
-            padding: 0;
-        }
-        .table-style {
+// content
+.future-event, .repeated-event, .historical-event {
+    width: 49%;
+    table {
             border-collapse: collapse;
             margin: 25px 0px;
             font-size: $table_font_size;
@@ -78,4 +52,31 @@ a {
                 border-bottom: 2px solid $thead-color;
             }
         }
+}
+
+.line{
+    width: 30%;
+    border: 1px dashed #b6b5b5;
+    margin: 1rem auto;
+}
+
+button, input {
+    margin: 0 auto;
+    display: block;
+    background-color: $button-color;
+    width: 4rem;
+    height: 1.5rem;
+    margin: 0.2rem;
+    color: white;
+    font-family: $font-text;
+
+    a {
+        color: white;
+        font-family: $font-text;
     }
+}
+
+p {
+    padding-left: 2rem;
+}
+
