--- a/resources/scss/colors.scss
+++ b/resources/scss/colors.scss
@@ -1,2 +1,12 @@
 $background_color: darkgoldenrod;
 $login_button: darkmagenta;
+
+// ADMIN SECTION COLORS
+$table_font_size: 18px;
+$background: #fffaf1;
+$even_rows: #f9edcc;
+$input-colort: #f9edcc;
+$thead-color: #edae49;
+$button-color: #414c6b;
+$main-shadow: 0px 1px 5px rgb(173, 173, 173);
+$font-text: "Comfortaa", cursive;
