--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -1,6 +1,7 @@
 @import 'group/show.scss';
 @import 'user/show.scss';
 @import 'admin/index.scss';
+@import 'admin/all-events.scss';
 @import 'navigation/nav.scss';
 // @import "../js/SearchPage/components/DragAndDrop/style-ver1.scss";
 // @import "../js/SearchPage/components/DragAndDrop/style-ver2.scss";
