--- a/resources/scss/login/login.scss
+++ b/resources/scss/login/login.scss
@@ -76,7 +76,7 @@
         }
         input {
             width: 100%;
-            padding: 7px 0;
+            padding: 7px 5px;
             border: 1px solid $headers;
             &:focus {
                 border: 1px solid $headers;
