--- a/resources/scss/admin/index.scss
+++ b/resources/scss/admin/index.scss
@@ -15,15 +15,15 @@ a {
 
 .admin-container{
     display: grid;
-    width: 100vw;
     grid-template-columns: 1fr 2fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr;
     justify-items: start;
     margin: 2rem;
 }
     .left-side, .right-side{
         h2 {
             text-align: left;
+            padding: 0;
         }
         button {
             margin: 0 auto;
