--- a/resources/scss/login/login.scss
+++ b/resources/scss/login/login.scss
@@ -91,7 +91,7 @@
 .btn-login {
     font-family: "Comfortaa", cursive;
     font-size: 0.9rem;
-    background-color: #5f709e;
+    background-color: #1565c0;
     color: #fff;
     padding: 7px;
     &__login {
