--- a/resources/scss/admin/all-events.scss
+++ b/resources/scss/admin/all-events.scss
@@ -1,10 +1,39 @@
 @import '../colors.scss';
 
-h2 {
-    display: flex;
-    align-self: flex-start;
-    padding: 2rem 0 0 2rem;
+   
+.all_events{
+    h2 {
+        display: flex;
+        align-self: flex-start;
+        padding: 2rem 0 0 2rem;
+    }
+    button, input {
+        margin: 0 auto;
+        display: block;
+        background-color: $button-color;
+        width: 4rem;
+        height: 1.5rem;
+        margin: 0.2rem;
+        color: white;
+        font-family: $font-text;
+
+        a {
+            color: white;
+            font-family: $font-text;
+        }
+    }
+    p {
+    padding-left: 2rem;
+    }
+    .alert-success{
+        background-color: rgb(122, 190, 122);
+        width: 15%;
+        padding: 1rem;
+        margin-left: 2rem;
+    }
 }
+
+
 
 // containers
 .future-container, .repeated-container, .historical-container{
@@ -58,25 +87,5 @@ h2 {
     width: 30%;
     border: 1px dashed #b6b5b5;
     margin: 1rem auto;
-}
-
-button, input {
-    margin: 0 auto;
-    display: block;
-    background-color: $button-color;
-    width: 4rem;
-    height: 1.5rem;
-    margin: 0.2rem;
-    color: white;
-    font-family: $font-text;
-
-    a {
-        color: white;
-        font-family: $font-text;
-    }
-}
-
-p {
-    padding-left: 2rem;
 }
 
