--- a/public/css/main.css
+++ b/public/css/main.css
@@ -292,7 +292,7 @@ div p {
   border: 2.5px solid #ea2b1f;
   border-radius: 5px;
   box-shadow: 1px 1px 5px #ea2b1f;
-  position: static;
+  position: absolute;
 }
 .column:nth-child(1) {
   left: 20px;
@@ -305,7 +305,7 @@ div p {
   width: 30%;
   height: 55vh;
   box-shadow: 1.5px 1.5px 6px #ea2b1f;
-  position: static;
+  position: relative;
 }
 .column:nth-child(2) h2 {
   font-size: 2.6em;
@@ -524,30 +524,16 @@ button.refine.close {
 
 .refinement-box {
   width: 20%;
-  height: 60%;
-  background-color: #f9df74;
-}
-
-h2#refinement-box__title {
-  font-size: 0.8em;
-}
-
-#refinement-box-1 {
-  width: 20%;
   height: 40%;
   position: fixed;
-  right: 10em;
   z-index: 1;
   background-color: #f9df74;
 }
-
-#refinement-box {
-  width: 20%;
-  height: 40%;
-  position: fixed;
-  right: 5em;
-  background-color: #f9df74;
-  z-index: 1;
+.refinement-box:nth-child(4) {
+  left: 38%;
+}
+.refinement-box:nth-child(5) {
+  left: 60%;
 }
 
 .popup-bg {
