--- a/resources/js/SearchPage/components/DragAndDrop/style-ver4.scss
+++ b/resources/js/SearchPage/components/DragAndDrop/style-ver4.scss
@@ -25,7 +25,7 @@ $font-headers: 'Nunito', sans-serif;
 
 main {
     width: 100vw;
-    height: 100%;
+    height: 90vh;
     margin-top: 0;
     padding: 0;
     display: flex;
@@ -187,6 +187,7 @@ h5 {
 .dragging {
     background-color: #ff6951;
     box-shadow: 5px 5px 5px black;
+    z-index: 5;
 }
 
 .dragged-over {
@@ -333,7 +334,7 @@ button.refine {
     width: 20%;
     height: 40%;
     position: fixed;
-    z-index: 1;
+    //z-index: 1;
     background-color: $light-yellow;
     &:nth-child(4) {
         left: 38%;
