--- a/resources/js/SearchPage/components/SessionControls/SessionControls.scss
+++ b/resources/js/SearchPage/components/SessionControls/SessionControls.scss
@@ -1,6 +1,7 @@
 .session-controls {
+    width: 100%;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 50%;
+    background-color: #fffaf1;
 }
