--- a/resources/scss/colors.scss
+++ b/resources/scss/colors.scss
@@ -6,6 +6,7 @@ $background: #fffaf1;
 $background-draggable: #f9edcc;
 $pop-border: #ea2b1f;
 $search: #edae49;
+$box-light-yellow: #faca7d;
 $light-yellow: #f9df74;
 $headers: #414c6b;
 
@@ -15,6 +16,7 @@ $pop-shadow: 1px 1px 5px $pop-border;
 
 // font
 $font-headers: "Nunito", sans-serif;
+
 // ADMIN SECTION COLORS
 $table_font_size: 18px;
 $background: #fffaf1;
