First version for go live

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -191,10 +191,12 @@ body {
 .create-form {
   display: flex;
   justify-content: center;
+  align-items: start;
 }
 .create-form .first-part {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   width: 20%;
   padding: 2rem;
 }
