--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,7 +7,29 @@
 .group-display-members {
   display: flex;
   justify-content: space-between;
-  width: 20%;
+  width: 100%;
+}
+
+#add-user {
+  width: 100%;
+  display: flex;
+  flex-flow: column wrap;
+}
+#add-user input[type=text] {
+  width: 100%;
+  padding: 5px;
+  margin: 1em 0;
+  border-radius: 5px;
+}
+#add-user button {
+  background-color: #414c6b;
+  color: #fff;
+  width: 80px;
+  border-radius: 5px;
+  font-size: 15px;
+  padding: 10px;
+  font-family: "Comfortaa", cursive;
+  font-size: 15px;
 }
 
 .user-container {
@@ -97,6 +119,12 @@
   grid-template-columns: 1fr 1fr;
 }
 
+.select-group h4 {
+  border-bottom: 1px solid #ea2b1f;
+  box-shadow: 1px 1px 3px #ea2b1f;
+  padding: 0.5em 0 0.5em 0.5em;
+  margin-bottom: 1em;
+}
 .select-group a {
   text-decoration: none;
   border-bottom: 1px solid grey;
