--- a/resources/scss/group/show.scss
+++ b/resources/scss/group/show.scss
@@ -7,8 +7,31 @@
 .group-display-members {
     display: flex;
     justify-content: space-between;
-    width: 20%;
+    width: 100%;
 }
 
 .btn-group-remove {
+}
+
+#add-user {
+    width: 100%;
+    display: flex;
+    flex-flow: column wrap;
+
+    input[type="text"] {
+        width: 100%;
+        padding: 5px;
+        margin: 1em 0;
+        border-radius: 5px;
+    }
+    button {
+        background-color: $headers;
+        color: #fff;
+        width: 80px;
+        border-radius: 5px;
+        font-size: 15px;
+        padding: 10px;
+        font-family: $font-text;
+        font-size: 15px;
+    }
 }
